# codedu

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.db.yml  docker-compose.yml  generate_prompt.py  if_closes.txt  package-lock.json  package.json  refresh_docker.sh  seed.img  translate_app.py  uuid_migration_helper.md
backend/: .dockerignore  .env.example  CMakeLists.txt  Dockerfile  Dockerfile-crow  Dockerfile-postgres  auth.go  auth_oidc.go  avatar_test.go  bakalari.go  bakalari_test.go  banned_tools.go  dashboard.go  db.go  docker-compose.yml  email_verification.go  events.go  forum_events.go  forum_handlers.go  function_runner.go  function_runner_test.go  go.mod  go.sum  handlers.go  handlers_test.go  main.go  message_events.go  middleware.go  models.go  models_test.go  notifications.go  password_reset.go  password_reset_test.go  permissions.go  schema.sql  scratch_semantic.go  scratch_serializer.go  sessions.go  sessions_test.go  stdout_normalize.go  (+12 more)
backend/db/: init.sql
backend/dr_scratch/: drscratch_cli.py
backend/dr_scratch/app/hairball3/: backdropNaming.py  duplicateScripts.py  mastery.py  scriptObject.py  spriteNaming.py
backend/include/: base64.h  hash.h  postgres_connection.h  sessions.h  tasks.h  test_execution_handler.h
backend/llm_agent/: __init__.py  evaluate.py  mcp_runner.py  requirements.txt  scratch_mcp_server.py
backend/migrations/: 000001_initial.down.sql  000001_initial.up.sql  000002_classes_and_roles.up.sql
backend/scripts/: mcp_agent_llm.py  mcp_agent_ping.py
backend/src/: hash.cpp  main.cpp  postgres_connection.cpp  sessions.cpp  tasks.cpp  test_execution_handler.cpp
deploy/: nginx.conf  nginx.conf.template
deploy/backup/: entrypoint.sh  run_backup.sh
docs/: specification.md
frontend/: .dockerignore  Dockerfile  Dockerfile-react  README.md  build_output.txt  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts
frontend/src/: App.js  App.svelte  app.css  app.d.ts  app.html  hooks.server.ts  main.ts
frontend/src/lib/: AdminPanel.svelte  AvatarCropper.svelte  Counter.svelte  FileTree.svelte  FileTreeItem.svelte  Layout.svelte  MarkdownEditor.svelte  NotebookEditor.svelte  Sidebar.svelte  api.ts  auth.ts  bakalari.ts  bannedCatalog.ts  compressImage.ts  date.ts  e2ee.ts  hash.ts  image.ts  index.ts  llmStrictness.ts  markdown.ts  messages.ts  notebook.ts  pyWorker.ts  pyodide.ts  sidebar.ts  sse.ts  status.ts  teacherGroup.ts  unittests.ts
frontend/src/lib/components/: Background.svelte  ConfirmModal.svelte  CustomSelect.svelte  DeadlinePicker.svelte  ExtendDeadlineModal.svelte  MessageStats.svelte  NewChatModal.svelte  NotebookEditor.svelte  PromptModal.svelte  RunConsole.svelte  ScratchAnalysisPanel.svelte  ScratchBlocksSnippet.svelte  ScratchBlocksViewer.svelte  ScratchPlayer.svelte  StylishInput.svelte  Terminal.svelte  TestFileManager.svelte  UnsavedChangesModal.svelte  UserDropdown.svelte  UserProfileModal.svelte
frontend/src/lib/i18n/: detect.ts  index.ts
frontend/src/lib/layouts/: AppLayout.svelte
frontend/src/lib/react/: messaging.tsx
frontend/src/lib/stores/: classes.ts  messages.ts  notebookStore.ts  onlineUsers.ts  pendingReviews.ts
frontend/src/lib/ui/: Button.svelte  Input.svelte
frontend/src/lib/utils/: testFiles.ts  (+1 more)
frontend/src/pages/: HomePage.js  LoginPage.js  RegisterPage.js  TeacherLoginPage.js
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.ts  Admin.svelte  AssignmentDetail.svelte  ClassDetail.svelte  Dashboard.svelte  Login.svelte  MyClasses.svelte  Register.svelte  SubmissionDetail.svelte  TeacherClasses.svelte
frontend/static/: global.css
frontend/static/avatars/: new_p.py
frontend/static/chunks/: fetch-worker.c813c32be403f91001ba.js
runner/: Dockerfile
seed/: meta-data  user-data
testing/: CMakeLists.txt  index.html  server.cpp
translations/: state.json
(+50 files in other folders)
